--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Country API</title>
   </head>
-  <body data-theme="light">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
